--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -790,7 +790,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>331</width>
+          <width>308</width>
           <height>509</height>
          </rect>
         </property>
@@ -1205,7 +1205,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>257</width>
+          <width>212</width>
           <height>524</height>
          </rect>
         </property>
@@ -1445,7 +1445,7 @@
           <x>0</x>
           <y>0</y>
           <width>279</width>
-          <height>368</height>
+          <height>327</height>
          </rect>
         </property>
         <attribute name="label">
@@ -1735,8 +1735,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>101</width>
-          <height>368</height>
+          <width>98</width>
+          <height>28</height>
          </rect>
         </property>
         <attribute name="label">
@@ -1883,8 +1883,8 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>468</width>
-          <height>368</height>
+          <width>98</width>
+          <height>28</height>
          </rect>
         </property>
         <attribute name="label">
@@ -3018,7 +3018,7 @@ p, li { white-space: pre-wrap; }
     <string>Search events...</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+E</string>
+    <string>Ctrl+F</string>
    </property>
   </action>
   <action name="action_Asteroids1">
