--- a/cwpossel.ui
+++ b/cwpossel.ui
@@ -452,7 +452,7 @@
           <string>Atmosphere</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_8">
-          <item row="1" column="1">
+          <item row="1" column="2">
            <widget class="QSpinBox" name="spinBox_9">
             <property name="suffix">
              <string> hPa</string>
@@ -491,21 +491,21 @@
              <string>° Deg</string>
             </property>
             <property name="minimum">
-             <number>-50</number>
+             <number>-200</number>
             </property>
             <property name="maximum">
-             <number>50</number>
+             <number>200</number>
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
+          <item row="0" column="2">
            <widget class="QLabel" name="label_3">
             <property name="text">
              <string>Atm. pressure</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="2">
+          <item row="0" column="3">
            <spacer name="horizontalSpacer_7">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -518,12 +518,15 @@
             </property>
            </spacer>
           </item>
-          <item row="1" column="2">
+          <item row="1" column="3">
            <widget class="QCheckBox" name="checkBox">
             <property name="text">
              <string>Disable atm. refraction</string>
             </property>
            </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QComboBox" name="cb_tempType"/>
           </item>
          </layout>
         </widget>
