--- a/cweather.ui
+++ b/cweather.ui
@@ -258,6 +258,13 @@
         </spacer>
        </item>
        <item>
+        <widget class="QPushButton" name="pushButton_3">
+         <property name="text">
+          <string>Stop</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="pushButton_2">
          <property name="text">
           <string>OK</string>
